# triton_kernels

./: OPTIMIZATION_NOTES.md  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
benchmark/: README.md  __init__.py  bench_gemm.py  bench_packed_ops.py
examples/: gemm_example.py  packed_ops_example.py
src/triton_kernels/: __init__.py  gemm.py  modulation.py  packed.py  packed_ops.py  packed_ops.py.bak
tests/: __init__.py  test_gemm.py  test_modulation.py  test_packed.py  test_packed_ops.py
triton_kernels/: __init__.py
triton_kernels/kernels/: __init__.py
