[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[project]
name = "triton_kernels"
version = "0.1.0"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=1.24.4",
    "pandas>=2.3.3",
    "torch>=2.7.0",
    "triton>=3.0.0",
]
requires-python = ">=3.10"
authors = [{ name = "Wei Zhang", email = "suvtab@gmail.com" }]
description = "Custom Triton kernels with PyTorch reference implementations"
readme = "README.md"
license = "Unlicense"
license-files = ["LICEN[CS]E*"]
classifiers = ["Programming Language :: Python"]

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["triton_kernels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--strict-config"]
markers = [
    "cuda: marks tests that require CUDA (deselect with '-m \"not cuda\"')",
]
